src/test/deca/context/invalid/renduInter/06-wrong-type-assign-bool-int.deca
{
boolean x = true;
int y = 4;
x = y;
}